# taskshare-service

./: .env.mock  LICENSE  Makefile  README.md  docker-compose-local.yml  pyproject.toml
app/tasks/: DRF_GUIDE.md  GOROUTINE_FLOW.md  admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
deploy/db/: Dockerfile  init.sql
deploy/dev/: Dockerfile
